snapshots/edgehog_device_runtime__storage__interface__tests__storage_response_into_object_2.snap
---
source: src/storage/interface.rs
expression: obj
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "00000000-0000-0000-0000-000000000000",
            ),
        ),
        (
            "type",
            String(
                "delete",
            ),
        ),
        (
            "code",
            Integer(
                16,
            ),
        ),
        (
            "messages",
            StringArray(
                [
                    "file transfer request can't be handled currently",
                ],
            ),
        ),
    ],
}
