snapshots/edgehog_device_runtime__storage__interface__tests__storage_response_into_object_3.snap
---
source: src/storage/interface.rs
expression: obj
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "00000000-0000-0000-0000-000000000000",
            ),
        ),
        (
            "type",
            String(
                "delete",
            ),
        ),
        (
            "code",
            Integer(
                22,
            ),
        ),
        (
            "messages",
            StringArray(
                [
                    "runtime test error",
                    "runtime test error",
                ],
            ),
        ),
    ],
}
